# delegatify

./: Cargo.toml  README.md
db/migrations/: users.sql
migrations/: 20241110185245_users.sql
src/: commands.rs  database.rs  lib.rs  main.rs  spotify.rs
