[package]
name = "delegatify"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.48.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.48.0"
tracing = "0.1.37"
tokio = "1.26.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rspotify = { version = "0.13.3" }
chrono = "0.4.38"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx", "sqlx-native-tls"] }
sqlx = "0.8.2"
